<resources>
    <string name="app_name">Unit converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="convert">Convert</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">.</string>
    <string name="_11">0</string>
    <string name="delete">Delete</string>
    <string name="currency">Currency</string>
    <string name="weight">Weight</string>
    <string name="distance">Distance</string>
    <string name="temperature">Temperature</string>

</resources>